--- a/Login/Login/Base.lproj/Main.storyboard
+++ b/Login/Login/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Mxw-MC-Hmr">
-                                <rect key="frame" x="62" y="414" width="290" height="68"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mxw-MC-Hmr">
+                                <rect key="frame" x="62" y="349" width="290" height="198"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="amD-oT-aEw">
                                         <rect key="frame" x="0.0" y="0.0" width="290" height="34"/>
@@ -25,10 +25,26 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Enter password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yis-ms-JoX">
-                                        <rect key="frame" x="0.0" y="34" width="290" height="34"/>
+                                        <rect key="frame" x="0.0" y="44" width="290" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jeI-Fe-t2F" userLabel="Forgot Password">
+                                        <rect key="frame" x="0.0" y="88" width="290" height="30"/>
+                                        <state key="normal" title="Forgot Password?">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vj8-R0-5Wz" userLabel="Login">
+                                        <rect key="frame" x="0.0" y="128" width="290" height="30"/>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hoG-f7-9eM" userLabel="SignUp">
+                                        <rect key="frame" x="0.0" y="168" width="290" height="30"/>
+                                        <state key="normal" title="Sign Up"/>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -43,7 +59,10 @@
                     <connections>
                         <outlet property="centerY" destination="jN8-72-zfi" id="xZ3-UC-iV3"/>
                         <outlet property="email" destination="amD-oT-aEw" id="wFa-US-FhA"/>
+                        <outlet property="forgotPassword" destination="jeI-Fe-t2F" id="f9b-ew-5G3"/>
+                        <outlet property="loginButton" destination="vj8-R0-5Wz" id="jpU-NB-d29"/>
                         <outlet property="password" destination="Yis-ms-JoX" id="LfE-eH-1Mc"/>
+                        <outlet property="signupButton" destination="hoG-f7-9eM" id="Iet-SA-tds"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
