Burger menu Done

--- a/Dialpad/Dialpad/Base.lproj/Main.storyboard
+++ b/Dialpad/Dialpad/Base.lproj/Main.storyboard
@@ -464,7 +464,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="faJ-tD-OXF"/>
+        <segue reference="wmm-R3-Njk"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="circle.grid.3x3.fill" catalog="system" width="128" height="112"/>
