Contact Book started

--- a/Dialpad/Dialpad/Base.lproj/Main.storyboard
+++ b/Dialpad/Dialpad/Base.lproj/Main.storyboard
@@ -464,7 +464,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="wmm-R3-Njk"/>
+        <segue reference="rBY-8e-oya"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="circle.grid.3x3.fill" catalog="system" width="128" height="112"/>
