--- a/Contact Book/Contact Book/Base.lproj/Main.storyboard
+++ b/Contact Book/Contact Book/Base.lproj/Main.storyboard
@@ -3,8 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,26 +27,115 @@
         <!--Contact Book-->
         <scene sceneID="Stn-of-rON">
             <objects>
-                <viewController id="dui-IA-exu" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="fJr-MF-Y4G">
+                <viewController id="dui-IA-exu" customClass="CollectionViewController" customModule="Contact_Book" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="rQl-FP-nAe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <viewLayoutGuide key="safeArea" id="zq6-2J-KZS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OKd-dI-gef">
+                            <size key="itemSize" width="161" height="155"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="dCt-nZ-Sv5" customClass="CustomView" customModule="Contact_Book" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="161" height="155"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ha0-tR-slc">
+                                    <rect key="frame" x="0.0" y="0.0" width="161" height="155"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aoj-T5-IOQ" userLabel="Main View">
+                                            <rect key="frame" x="0.0" y="0.0" width="161" height="155"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NJA-BA-NDv">
+                                                    <rect key="frame" x="54.5" y="10" width="52.5" height="50"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfK-yh-im3">
+                                                            <rect key="frame" x="5" y="14.5" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                                    <constraints>
+                                                        <constraint firstItem="yfK-yh-im3" firstAttribute="centerY" secondItem="NJA-BA-NDv" secondAttribute="centerY" id="1X1-2b-owE"/>
+                                                        <constraint firstAttribute="width" constant="52.5" id="auu-pN-ml0"/>
+                                                        <constraint firstAttribute="height" constant="50" id="dLX-pn-eAo"/>
+                                                        <constraint firstItem="yfK-yh-im3" firstAttribute="centerX" secondItem="NJA-BA-NDv" secondAttribute="centerX" id="zrp-yi-SGf"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYY-M6-aza">
+                                                    <rect key="frame" x="59.5" y="80" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nAq-fI-Edj">
+                                                    <rect key="frame" x="59.5" y="100" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="nAq-fI-Edj" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="St4-zI-ApO"/>
+                                                <constraint firstItem="ZYY-M6-aza" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="aWf-O8-HZg"/>
+                                                <constraint firstItem="ZYY-M6-aza" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="20" id="gGp-tL-20q"/>
+                                                <constraint firstItem="NJA-BA-NDv" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="kC5-VN-gL1"/>
+                                                <constraint firstItem="NJA-BA-NDv" firstAttribute="top" secondItem="Aoj-T5-IOQ" secondAttribute="top" constant="10" id="rwg-Cd-PZU"/>
+                                                <constraint firstItem="nAq-fI-Edj" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="40" id="tGr-8w-Tv5"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="tintColor" systemColor="systemGreenColor"/>
+                                    <constraints>
+                                        <constraint firstItem="Aoj-T5-IOQ" firstAttribute="leading" secondItem="Ha0-tR-slc" secondAttribute="leading" id="6dL-Ec-2cS"/>
+                                        <constraint firstItem="Aoj-T5-IOQ" firstAttribute="width" secondItem="Ha0-tR-slc" secondAttribute="width" id="Fh3-Z6-rs5"/>
+                                        <constraint firstItem="Aoj-T5-IOQ" firstAttribute="top" secondItem="Ha0-tR-slc" secondAttribute="top" id="d2M-TS-1he"/>
+                                        <constraint firstItem="Aoj-T5-IOQ" firstAttribute="height" secondItem="Ha0-tR-slc" secondAttribute="height" id="vlU-1G-l0g"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="circle" destination="NJA-BA-NDv" id="zrW-MP-QDJ"/>
+                                    <outlet property="contactName" destination="nAq-fI-Edj" id="9P4-VL-Nzo"/>
+                                    <outlet property="initials" destination="yfK-yh-im3" id="w08-xa-P4V"/>
+                                    <outlet property="mainView" destination="Aoj-T5-IOQ" id="epR-Qi-fwZ"/>
+                                    <outlet property="number" destination="ZYY-M6-aza" id="Xep-TM-Tjn"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="dui-IA-exu" id="BqJ-eK-bV8"/>
+                            <outlet property="delegate" destination="dui-IA-exu" id="9tR-kA-Ra1"/>
+                        </connections>
+                    </collectionView>
                     <navigationItem key="navigationItem" title="Contact Book" id="WuH-Af-Qlr">
-                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="aTI-18-uMB"/>
+                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="aTI-18-uMB">
+                            <connections>
+                                <action selector="add:" destination="dui-IA-exu" id="tOp-Fe-51C"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w0C-ey-oCR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1577" y="321"/>
+            <point key="canvasLocation" x="-1546.376811594203" y="320.75892857142856"/>
         </scene>
     </scenes>
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
