--- a/Contact Book/Contact Book/Base.lproj/Main.storyboard
+++ b/Contact Book/Contact Book/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OKd-dI-gef">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="layoutMargins" id="OKd-dI-gef">
                             <size key="itemSize" width="161" height="155"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -40,7 +40,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="dCt-nZ-Sv5" customClass="CustomView" customModule="Contact_Book" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="161" height="155"/>
+                                <rect key="frame" x="20" y="8" width="161" height="155"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ha0-tR-slc">
                                     <rect key="frame" x="0.0" y="0.0" width="161" height="155"/>
@@ -68,13 +68,13 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYY-M6-aza">
-                                                    <rect key="frame" x="59.5" y="80" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="62" y="79" width="37.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nAq-fI-Edj">
-                                                    <rect key="frame" x="59.5" y="100" width="42" height="21"/>
+                                                    <rect key="frame" x="59.5" y="98" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -84,10 +84,10 @@
                                             <constraints>
                                                 <constraint firstItem="nAq-fI-Edj" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="St4-zI-ApO"/>
                                                 <constraint firstItem="ZYY-M6-aza" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="aWf-O8-HZg"/>
-                                                <constraint firstItem="ZYY-M6-aza" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="20" id="gGp-tL-20q"/>
+                                                <constraint firstItem="ZYY-M6-aza" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="19" id="gGp-tL-20q"/>
                                                 <constraint firstItem="NJA-BA-NDv" firstAttribute="centerX" secondItem="Aoj-T5-IOQ" secondAttribute="centerX" id="kC5-VN-gL1"/>
                                                 <constraint firstItem="NJA-BA-NDv" firstAttribute="top" secondItem="Aoj-T5-IOQ" secondAttribute="top" constant="10" id="rwg-Cd-PZU"/>
-                                                <constraint firstItem="nAq-fI-Edj" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="40" id="tGr-8w-Tv5"/>
+                                                <constraint firstItem="nAq-fI-Edj" firstAttribute="top" secondItem="NJA-BA-NDv" secondAttribute="bottom" constant="38" id="tGr-8w-Tv5"/>
                                             </constraints>
                                         </view>
                                     </subviews>
